[project]
name = "piphi_network_tp_link"
version = "0.1.0"
description = "PiPhi TP-Link Kasa integration"
authors = [
    {name = "KelvinSan", email = "kelvin.sanyaolu@gmail.com"},
]
dependencies = [
    "python-kasa>=0.10.2",
    "fastapi[standard]>=0.135.2",
    "aiofiles>=25.1.0",
    "httpx>=0.27.0",
    "piphi-runtime-kit-python @ file:///${PROJECT_ROOT}/../piphi-runtime-kit-python",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "piphi-runtime-testkit-python @ file:///${PROJECT_ROOT}/../piphi-runtime-testkit-python",
]
